# chrono-humanize-rs

./: .gitlab-ci.yml  Cargo.toml  README.md
benches/: benches.rs
examples/: humanize_systemtime.rs
src/: humantime.rs  lib.rs
tests/: humanize.rs  lib.rs  precise.rs  present.rs  rough.rs
